--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon index"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "*",
     "mysql": "^2.15.0",
     "socket.io": "*",
